Fix the frontend bug that within <i> tag, icon and text do not display on the same line. Remove the "pr-5 pl-5" classes on <a> tags. Note: this will still happen when shrink the page width, maybe the text is too wide for its parent element <a> tag. I try to use @Media to make fontsize smaller. Also move the location of main LOGO to top left corner.

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -326,3 +326,18 @@ input[type=number]::-webkit-inner-spin-button {
   cursor: pointer;
   border-radius: 4px;
 }
+
+.logo-image {
+	margin: 10px 10px;
+}
+
+nav ul li {
+	margin: 3px 10px 1px 10px;
+	padding: 5px 10px 5px 10px;
+}
+
+@media(max-width: 1200px) {
+    .nav-item a {
+        font-size: 11px !important; /* Adjust font size based on viewport width */
+    }
+}
